--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,8 +1,11 @@
 on:
   pull_request_review:
-    - types: [submitted, edited]
+    types:
+      - submitted
+      - edited
   workflow_run:
-    - types: [completed]
+    types:
+      - completed
 
 
 jobs:
