--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -17,7 +17,5 @@ jobs:
           python-version: "3.8"
       - name: debug
         run: |
-          echo $GITHUB_EVENT_NAME
-          echo $GITHUB_EVENT_PATH
-          echo $GITHUB_REF
-          echo $GITHUB_SHA
+          pip install PyGithub
+          python auto-merge.py
