--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -12,10 +12,11 @@ jobs:
     name: Auto Merge Pull Requests
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
         with:
           python-version: "3.8"
       - name: debug
         run: |
           pip install PyGithub
-          python auto-merge.py
+          python .github/workflows/auto-merge.py
