--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -16,7 +16,9 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: "3.8"
-      - name: debug
+      - name: Install PyGithub
         run: |
           pip install PyGithub
+      - name: debug
+        run: |
           python .github/workflows/auto-merge.py
